@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?> 
-<addon id="plugin.video.drnu" version="1.1.2" name="DR NU Player" provider-name="InKaKiLLeR, twinther [tommy@winther.nu]"> 
+<addon id="plugin.video.drnu" version="1.1.3" name="DR NU Player" provider-name="InKaKiLLeR, twinther [tommy@winther.nu]">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
     <import addon="script.module.simplejson" version="2.0.10"/>
-    <import addon="script.module.danishaddons" version="1.0.5"/>
+    <import addon="script.module.danishaddons" version="1.1.0"/>
   </requires> 
   <extension point="xbmc.python.pluginsource" library="drnu.py">
 	  <provides>video</provides>
